--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@ button{
 
 #mainPhoto{
   width:100%;
+  max-height:55vh;
+  object-fit:cover;
   border-radius:25px;
-  margin-bottom:25px;
+  margin-bottom:20px;
   box-shadow:0 20px 50px rgba(0,0,0,0.25);
 }
 
