--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@ function setupButtons(){
     "Alya that’s kinda mean 😔",
     "Think again...",
     "You dont love me",
+    "Pleasee😊"
+    "With a cherry❤️"
   ];
 
   let index=0;
@@ -183,7 +185,7 @@ function setupButtons(){
   yesBtn.addEventListener("click",function(){
     document.getElementById("container").innerHTML=`
       <div class="card">
-        <h1>You had no choice 😌💕<br><br>Guess we have plans now.😁</h1>
+       <h1>Love youu💞<br><h1>You had no choice anw😌💕<br><br>Guess we have plans now.😁</h1>
         <img id="finalPhoto" src="finalphoto.jpg.jpg">
       </div>
     `;
