--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ function setupButtons(){
   yesBtn.addEventListener("click",function(){
     document.getElementById("container").innerHTML=`
       <div class="card">
-       <h1>Love youu💞<br><h1>You had no choice anw😌💕<br><br>Guess we have plans now.😁</h1>
+   <h1>You had no choice anw😌💕<br><br>Guess we have plans now.😁</h1>
         <img id="finalPhoto" src="finalphoto.jpg.jpg">
       </div>
     `;
