--- a/index.html
+++ b/index.html
@@ -1,225 +1,423 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>For Alya 💌</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>For Alya 💗💌</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+<!-- fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
 <style>
+:root{
+  --pink1:#ffb6d9;
+  --pink2:#ffd6eb;
+  --accent:#ff2e88;
+  --btn1:#ff4d9e;
+}
+html,body{height:100%;margin:0;}
 body{
-  margin:0;
-  min-height:100vh;
+  font-family:"Poppins",system-ui,-apple-system,"Segoe UI",Roboto,Arial;
+  background:linear-gradient(160deg,var(--pink1),var(--pink2));
+  -webkit-font-smoothing:antialiased;
   display:flex;
-  justify-content:center;
   align-items:center;
-  background:linear-gradient(160deg,#ffb6d9,#ffd6eb);
-  font-family:'Poppins',sans-serif;
-  text-align:center;
-  overflow:hidden;
+  justify-content:center;
+  padding:18px;
+  color:#222;
+  overflow-y:auto; /* allow scrolling for the letter/bouquet section */
 }
 
-#container{
+/* center card */
+.container{
   width:100%;
-  max-width:520px;
+  max-width:720px;
+  margin:0 auto;
+  text-align:center;
+  box-sizing:border-box;
 }
 
+/* glass card style */
 .card{
-  background:rgba(255,255,255,0.15);
-  backdrop-filter:blur(15px);
-  padding:35px;
-  border-radius:30px;
-  box-shadow:0 20px 50px rgba(0,0,0,0.15);
+  background:rgba(255,255,255,0.12);
+  backdrop-filter: blur(14px);
+  padding:28px;
+  border-radius:28px;
+  box-shadow:0 20px 50px rgba(0,0,0,0.14);
+  margin:12px 0;
+}
+
+/* start screen */
+#envelope{
+  width:220px;
+  max-width:82vw;
+  cursor:pointer;
+  border-radius:14px;
+  filter:drop-shadow(0 12px 26px rgba(0,0,0,0.18));
+  transition:transform .28s ease;
+}
+#envelope:hover{ transform: translateY(-6px) rotate(-2deg) scale(1.02); }
+
+.title{
+  font-family:"Playfair Display", serif;
+  color:var(--accent);
+  margin:10px 0 8px 0;
+  font-size:clamp(26px,4.6vw,44px);
+}
+
+/* buttons */
+.openBtn{
+  background:linear-gradient(90deg,var(--btn1),#ff6fb0);
+  color:white;
+  border:none;
+  padding:13px 36px;
+  border-radius:36px;
+  font-size:18px;
+  box-shadow:0 10px 26px rgba(255,77,158,0.24);
+  cursor:pointer;
+}
+.pulse{ animation:pulse 1.6s infinite; }
+@keyframes pulse{ 0%{transform:scale(1);}50%{transform:scale(1.07);}100%{transform:scale(1);} }
+
+/* question screen */
+#mainPhoto{
+  width:100%;
+  max-height:55vh;      /* <-- controlled size for phone */
+  object-fit:cover;
+  border-radius:22px;
+  box-shadow:0 18px 40px rgba(0,0,0,0.18);
+  margin-bottom:18px;
+}
+
+/* button row */
+.btnRow{ display:flex; gap:16px; justify-content:center; align-items:center; margin-top:8px; }
+.yes, .no {
+  border:none;
+  padding:12px 28px;
+  border-radius:32px;
+  font-size:18px;
+  cursor:pointer;
+}
+.yes{
+  background:linear-gradient(90deg,#ff476e,#ff2e88);
+  color:white;
+  box-shadow:0 10px 22px rgba(255,46,136,.22);
+  transform-origin:center;
+}
+.no{
+  background:#5e5e5e;
+  color:white;
+  box-shadow:0 6px 14px rgba(0,0,0,0.12);
   position:relative;
 }
 
-h1{
-  font-family:'Playfair Display',serif;
-  color:white;
-  font-size:clamp(28px,6vw,42px);
-  text-shadow:0 6px 20px rgba(0,0,0,0.25);
-  margin-bottom:20px;
+/* final screen */
+#finalText{
+  font-family:"Playfair Display", serif;
+  font-size:clamp(22px,5.2vw,40px);
+  color:var(--accent);
+  text-shadow:0 8px 26px rgba(255,46,136,0.12);
+  margin:12px 6px;
+  line-height:1.06;
 }
-
-button{
-  border:none;
-  padding:14px 36px;
-  border-radius:40px;
-  font-size:18px;
-  cursor:pointer;
-  margin:5px;
-}
-
-.yes{
-  background:linear-gradient(90deg,#ff4d9e,#ff2e88);
-  color:white;
-  box-shadow:0 10px 25px rgba(255,46,136,0.4);
-  transition:0.2s;
-}
-
-.no{
-  background:#555;
-  color:white;
-  transition:0.2s;
-}
-
-#mainPhoto{
-  width:100%;
-  max-height:50vh;
-  object-fit:cover;
-  border-radius:25px;
-  margin-bottom:20px;
-  box-shadow:0 20px 50px rgba(0,0,0,0.25);
-}
-
 #finalPhoto{
   width:100%;
-  max-height:50vh;
+  max-height:58vh;    /* <-- controlled final image size */
   object-fit:cover;
-  border-radius:25px;
-  margin-top:20px;
-  box-shadow:0 20px 50px rgba(0,0,0,0.25);
+  border-radius:22px;
+  box-shadow:0 20px 50px rgba(0,0,0,0.22);
+  margin-top:12px;
 }
 
-.pulse{
-  animation:pulse 1.6s infinite;
+/* bouquet + letter area (below final) */
+#extraSection{
+  margin-top:18px;
+  padding:18px;
+  text-align:center;
+}
+/* closed letter button */
+#letterClosed{
+  background:linear-gradient(90deg,#fff,#ffe6f2);
+  border-radius:16px;
+  padding:14px 18px;
+  display:inline-block;
+  cursor:pointer;
+  box-shadow:0 8px 24px rgba(0,0,0,0.12);
+  margin-top:12px;
 }
 
-@keyframes pulse{
-  0%{transform:scale(1);}
-  50%{transform:scale(1.08);}
-  100%{transform:scale(1);}
+/* letter content (hidden until open) */
+#letterBox{
+  background:linear-gradient(180deg,#fffdfc,#fff7fb);
+  border-radius:14px;
+  padding:18px;
+  margin:14px auto;
+  max-width:720px;
+  box-shadow:0 12px 30px rgba(0,0,0,0.12);
+  display:none;
+  text-align:left;
+  color:#222;
+  line-height:1.45;
 }
 
+/* bouquet container */
+#bouquet{
+  width:100%;
+  max-width:420px;
+  margin:10px auto 0 auto;
+  min-height:120px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  gap:6px;
+  opacity:0;
+  transition:opacity .8s ease;
+}
+
+/* each rose bubble */
+.rose{
+  font-size:28px;
+  transform:translateY(18px) scale(.9);
+  opacity:0;
+  transition: transform .6s cubic-bezier(.2,.9,.2,1), opacity .6s;
+  filter:drop-shadow(0 6px 10px rgba(0,0,0,0.12));
+}
+
+/* when bouquet becomes visible */
+#bouquet.visible{ opacity:1; }
+#bouquet.visible .rose{
+  transform:translateY(0) scale(1);
+  opacity:1;
+}
+
+/* floating hearts + confetti pieces */
 .floating-heart{
   position:fixed;
   bottom:-20px;
   font-size:26px;
-  animation:floatUp linear forwards;
   pointer-events:none;
+  animation:floatUp linear forwards;
 }
-
-@keyframes floatUp{
-  to{transform:translateY(-120vh);opacity:0;}
-}
+@keyframes floatUp{ to { transform:translateY(-120vh) rotate(180deg); opacity:0; } }
 
 .confetti-piece{
   position:fixed;
   top:-20px;
   width:8px;
-  height:14px;
+  height:12px;
   animation:fall linear forwards;
   pointer-events:none;
 }
+@keyframes fall{ to{ transform:translateY(120vh) rotate(360deg); } }
 
-@keyframes fall{
-  to{transform:translateY(120vh) rotate(360deg);}
+/* responsive tweaks */
+@media(min-width:900px){
+  #mainPhoto{ max-width:520px; }
+  #finalPhoto{ max-width:640px; }
 }
 </style>
 </head>
-
 <body>
+  <div class="container">
 
-<div id="container">
+    <!-- START -->
+    <div class="card" id="startCard">
+      <img id="envelope" src="envelope.png.jpg" alt="Envelope for Alya" onclick="openLetter()" />
+      <h2 class="title">For Alya💗💌</h2>
+      <button class="openBtn pulse" onclick="openLetter()">Open</button>
+    </div>
 
-  <!-- START SCREEN -->
-  <div class="card">
-    <img src="envelope.png.jpg" width="220" onclick="openLetter()" style="cursor:pointer;">
-    <h1>For Alya💗💌</h1>
-    <button class="yes pulse" onclick="openLetter()">Open</button>
+    <!-- the container where screens swap -->
+    <div id="screenHolder"></div>
+
+    <!-- NOTE: extraSection will be added to screenHolder on final; kept here for clarity -->
   </div>
 
-</div>
-
 <script>
+/* ---------- Globals ---------- */
+window._heartsInterval = null;
+window._confettiInterval = null;
 
+/* ---------- Open letter (question) ---------- */
 function openLetter(){
-  document.getElementById("container").innerHTML = `
+  const holder = document.getElementById('screenHolder');
+  holder.innerHTML = `
     <div class="card" id="questionCard">
-      <img id="mainPhoto" src="mainphoto.jpg">
-      <h1>Will you be my Valentine? 💖</h1>
-      <div>
-        <button class="yes" id="yesBtn">Yes 💕</button>
-        <button class="no" id="noBtn">No 😢</button>
+      <img id="mainPhoto" src="mainphoto.jpg" alt="Alya">
+      <h2 style="margin:0; font-family:'Playfair Display', serif; color:#fff; text-shadow:0 4px 18px rgba(0,0,0,0.22); font-size:clamp(20px,5vw,32px);">Will you be my Valentine? 💖</h2>
+      <div class="btnRow" style="margin-top:14px;">
+        <button class="yes" id="yesBtn" onclick="showFinal()">Yes 💕</button>
+        <button class="no" id="noBtn" onclick="noClicked(this)">No 😢</button>
       </div>
     </div>
   `;
-  setupButtons();
+  // make sure any previous intervals cleared
+  if(window._heartsInterval){ clearInterval(window._heartsInterval); window._heartsInterval = null; }
+  if(window._confettiInterval){ clearInterval(window._confettiInterval); window._confettiInterval = null; }
 }
 
-function setupButtons(){
-  const yesBtn=document.getElementById("yesBtn");
-  const noBtn=document.getElementById("noBtn");
+/* ---------- NO button behavior (adds messages + moves) ---------- */
+let _noIndex = 0;
+let _yesScale = 1;
+const messages = [
+  "Are you sure? 🥺",
+  "Really sure??",
+  "Pleasee😊",
+  "With a cherry❤️",
+  "Alya that’s kinda mean 😔",
+  "Think again...",
+  "You dont love me"
+];
 
-  const messages=[
-    "Are you sure? 🥺",
-    "Really sure??",
-    "Alya that’s kinda mean 😔",
-    "Think again...",
-    "You dont love me",
-    "Pleasee😊"
-    "With a cherry❤️"
-  ];
+function noClicked(el){
+  if(_noIndex < messages.length){
+    el.textContent = messages[_noIndex];
+    _noIndex++;
+  } else {
+    el.textContent = "Still no? 😭";
+  }
 
-  let index=0;
-  let scale=1;
+  // grow the Yes button
+  _yesScale += 0.32;
+  const yes = document.getElementById('yesBtn');
+  if(yes){ yes.style.transform = 'scale(' + _yesScale + ')'; yes.style.transition = 'transform .22s ease'; }
 
-  noBtn.addEventListener("click",function(){
+  // move the no button to a random spot
+  el.style.position = 'absolute';
+  el.style.left = Math.min(84, 6 + Math.random()*78) + '%';
+  el.style.top  = Math.min(82, 8 + Math.random()*72) + '%';
+  el.style.zIndex = 9999;
+}
 
-    if(index < messages.length){
-      noBtn.textContent = messages[index];
-      index++;
-    } else {
-      noBtn.textContent="Still no? 😭";
-    }
+/* ---------- Final screen (Yes) ---------- */
+function showFinal(){
+  const holder = document.getElementById('screenHolder');
 
-    scale+=0.35;
-    yesBtn.style.transform="scale("+scale+")";
-
-    noBtn.style.position="absolute";
-    noBtn.style.left=Math.random()*70+"%";
-    noBtn.style.top=Math.random()*60+"%";
-  });
-
-  yesBtn.addEventListener("click",function(){
-    document.getElementById("container").innerHTML=`
-      <div class="card">
-   <h1>You had no choice anw😌💕<br><br>Guess we have plans now.😁</h1>
-        <img id="finalPhoto" src="finalphoto.jpg.jpg">
+  // final HTML includes final image and an extra scroll section with bouquet + letter
+  holder.innerHTML = `
+    <div class="card" id="finalCard">
+      <div id="finalText" style="font-size:clamp(20px,5vw,36px);">
+        <div style="font-size:1.05rem; margin-bottom:8px; color:#ff2e88; font-family:'Poppins',sans-serif;">Love youu💞</div>
+        <div style="font-family:'Playfair Display', serif; color:#fff; text-shadow:0 6px 18px rgba(0,0,0,0.18);">
+          You had no choice 😌💕<br><br>Guess we have plans now 😁
+        </div>
       </div>
-    `;
-    startHearts();
-    startConfetti();
-  });
+
+      <img id="finalPhoto" src="finalphoto.jpg.jpg" alt="Us">
+    </div>
+
+    <div id="extraSection" class="card" style="margin-top:18px;">
+      <div style="font-family:'Playfair Display',serif; color:var(--accent); font-size:20px; margin-bottom:10px;">A little surprise</div>
+
+      <!-- closed letter (click to open) -->
+      <div id="letterClosed" onclick="openLetterBox()">
+        📜 Open letter
+      </div>
+
+      <!-- bouquet placeholder (roses will be added by JS) -->
+      <div id="bouquet" aria-hidden="true"></div>
+
+      <!-- letter content (hidden until open) -->
+      <div id="letterBox" aria-hidden="true">
+        <!-- >>> REPLACE THE TEXT BELOW with your personal letter. Keep it inside the <div id="letterText"> ... </div> -->
+        <div id="letterText" contenteditable="false" style="white-space:pre-line;">
+          Dear Alya,
+
+          (Replace this with your message — write whatever you want her to read. Keep it honest, short, and from the heart.)
+
+          Love,
+          Seif
+        </div>
+        <!-- <<< end editable area -->
+      </div>
+    </div>
+  `;
+
+  // start the celebration visuals
+  startHeartsContinuous();
+  startConfettiContinuous();
+
+  // small delay then show bouquet fade-in
+  setTimeout(()=> {
+    const b = document.getElementById('bouquet');
+    if(b){
+      // create 9 roses
+      b.innerHTML = '';
+      for(let i=0;i<9;i++){
+        const r = document.createElement('div');
+        r.className = 'rose';
+        r.innerHTML = '🌹';
+        r.style.fontSize = (20 + Math.random()*18) + 'px';
+        r.style.margin = '0 4px';
+        b.appendChild(r);
+      }
+      // trigger visible state (fades in)
+      setTimeout(()=> b.classList.add('visible'), 80);
+    }
+  }, 600);
 }
 
-function startHearts(){
-  setInterval(()=>{
-    const heart=document.createElement("div");
-    heart.className="floating-heart";
-    heart.innerHTML="💖";
-    heart.style.left=Math.random()*100+"vw";
-    heart.style.animationDuration=(4+Math.random()*2)+"s";
+/* ---------- Hearts & Confetti (continuous) ---------- */
+function startHeartsContinuous(){
+  if(window._heartsInterval) clearInterval(window._heartsInterval);
+  window._heartsInterval = setInterval(()=>{
+    const heart = document.createElement('div');
+    heart.className = 'floating-heart';
+    heart.innerHTML = '💖';
+    heart.style.left = Math.random()*100 + 'vw';
+    heart.style.fontSize = (18 + Math.random()*22) + 'px';
+    heart.style.animationDuration = (3500 + Math.random()*2000) + 'ms';
     document.body.appendChild(heart);
-    setTimeout(()=>heart.remove(),6000);
-  },400);
+    setTimeout(()=> heart.remove(), 7000);
+  }, 420);
 }
 
-function startConfetti(){
-  const colors=["#ff2e88","#ffffff","#ffb6d9","#ff66b3"];
-  setInterval(()=>{
-    const piece=document.createElement("div");
-    piece.className="confetti-piece";
-    piece.style.left=Math.random()*100+"vw";
-    piece.style.backgroundColor=colors[Math.floor(Math.random()*colors.length)];
-    piece.style.animationDuration=(3+Math.random()*2)+"s";
+function startConfettiContinuous(){
+  if(window._confettiInterval) clearInterval(window._confettiInterval);
+  const colors = ['#ff2e88','#ffffff','#ffb6d9','#ff66b3','#ffd6eb','#ff4d9e'];
+  window._confettiInterval = setInterval(()=>{
+    const piece = document.createElement('div');
+    piece.className = 'confetti-piece';
+    piece.style.left = Math.random()*100 + 'vw';
+    piece.style.backgroundColor = colors[Math.floor(Math.random()*colors.length)];
+    piece.style.width = (6 + Math.random()*10) + 'px';
+    piece.style.height = (8 + Math.random()*16) + 'px';
+    piece.style.animationDuration = (2800 + Math.random()*2200) + 'ms';
     document.body.appendChild(piece);
-    setTimeout(()=>piece.remove(),5000);
-  },150);
+    setTimeout(()=> piece.remove(), 6000);
+  }, 140);
 }
 
-</script>
+/* ---------- Letter open interaction: blooms bouquet & reveals letter ---------- */
+function openLetterBox(){
+  // reveal letter box
+  const letterBox = document.getElementById('letterBox');
+  const bouquet = document.getElementById('bouquet');
+  const closed = document.getElementById('letterClosed');
+  if(closed) closed.style.display = 'none';
+  if(letterBox) letterBox.style.display = 'block';
+  if(bouquet) {
+    bouquet.classList.add('visible');
+    // add a little pop animation for flowers (stagger)
+    const roses = bouquet.querySelectorAll('.rose');
+    roses.forEach((r,i)=>{
+      r.style.transitionDelay = (i * 80) + 'ms';
+      r.style.transform = 'translateY(0) scale(1)';
+      r.style.opacity = '1';
+    });
+  }
+  // scroll to letter smoothly
+  setTimeout(()=> {
+    const target = letterBox || bouquet;
+    if(target) target.scrollIntoView({behavior:'smooth', block:'center'});
+  }, 120);
+}
 
+/* cleanup intervals on leave */
+window.addEventListener('beforeunload',()=>{
+  if(window._heartsInterval) clearInterval(window._heartsInterval);
+  if(window._confettiInterval) clearInterval(window._confettiInterval);
+});
+</script>
 </body>
 </html>
