--- a/index.html
+++ b/index.html
@@ -1,339 +1,222 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>For Alya 💗</title>
+<title>For Alya 💌</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
 body{
-margin:0;
-background:linear-gradient(to bottom,#ffd6ec,#ffc1e3);
-font-family:'Poppins',sans-serif;
-text-align:center;
-overflow-x:hidden;
+  margin:0;
+  min-height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background:linear-gradient(160deg,#ffb6d9,#ffd6eb);
+  font-family:'Poppins',sans-serif;
+  text-align:center;
+  overflow:hidden;
 }
 
-/* SECTIONS */
-.section{
-width:100%;
-min-height:100vh;
-display:none;
-padding:40px 20px;
-box-sizing:border-box;
-}
-.active{
-display:block;
+#container{
+  width:100%;
+  max-width:520px;
 }
 
-/* CARD */
 .card{
-background:#ffeaf6;
-border-radius:25px;
-padding:25px;
-max-width:420px;
-margin:0 auto;
-box-shadow:0 20px 50px rgba(0,0,0,0.15);
+  background:rgba(255,255,255,0.15);
+  backdrop-filter:blur(15px);
+  padding:35px;
+  border-radius:30px;
+  box-shadow:0 20px 50px rgba(0,0,0,0.15);
+  position:relative;
 }
 
-/* ENVELOPE */
-.envelope-img{
-width:100%;
-max-width:400px;
-border-radius:20px;
+h1{
+  font-family:'Playfair Display',serif;
+  color:white;
+  font-size:clamp(28px,6vw,42px);
+  text-shadow:0 6px 20px rgba(0,0,0,0.25);
+  margin-bottom:20px;
 }
 
-.open-btn{
-margin-top:20px;
-padding:15px 40px;
-border:none;
-border-radius:30px;
-font-size:18px;
-background:linear-gradient(45deg,#ff4fa3,#ff2d7a);
-color:white;
-cursor:pointer;
-animation:pulse 2s infinite;
+button{
+  border:none;
+  padding:14px 36px;
+  border-radius:40px;
+  font-size:18px;
+  cursor:pointer;
+  margin:5px;
 }
+
+.yes{
+  background:linear-gradient(90deg,#ff4d9e,#ff2e88);
+  color:white;
+  box-shadow:0 10px 25px rgba(255,46,136,0.4);
+  transition:0.2s;
+}
+
+.no{
+  background:#555;
+  color:white;
+  transition:0.2s;
+}
+
+#mainPhoto{
+  width:100%;
+  max-height:50vh;
+  object-fit:cover;
+  border-radius:25px;
+  margin-bottom:20px;
+  box-shadow:0 20px 50px rgba(0,0,0,0.25);
+}
+
+#finalPhoto{
+  width:100%;
+  max-height:50vh;
+  object-fit:cover;
+  border-radius:25px;
+  margin-top:20px;
+  box-shadow:0 20px 50px rgba(0,0,0,0.25);
+}
+
+.pulse{
+  animation:pulse 1.6s infinite;
+}
+
 @keyframes pulse{
-0%{transform:scale(1);}
-50%{transform:scale(1.08);}
-100%{transform:scale(1);}
+  0%{transform:scale(1);}
+  50%{transform:scale(1.08);}
+  100%{transform:scale(1);}
 }
 
-/* MAIN */
-.main-img{
-width:100%;
-border-radius:25px;
-margin-top:15px;
+.floating-heart{
+  position:fixed;
+  bottom:-20px;
+  font-size:26px;
+  animation:floatUp linear forwards;
+  pointer-events:none;
 }
 
-h2{
-font-family:'Playfair Display',serif;
-color:white;
-margin-top:20px;
+@keyframes floatUp{
+  to{transform:translateY(-120vh);opacity:0;}
 }
 
-/* BUTTONS */
-.buttons{
-margin-top:20px;
+.confetti-piece{
+  position:fixed;
+  top:-20px;
+  width:8px;
+  height:14px;
+  animation:fall linear forwards;
+  pointer-events:none;
 }
 
-.yes-btn{
-padding:15px 45px;
-font-size:20px;
-border:none;
-border-radius:30px;
-background:linear-gradient(45deg,#ff4fa3,#ff2d7a);
-color:white;
-cursor:pointer;
-transition:0.3s;
-}
-
-.no-btn{
-padding:15px 30px;
-font-size:18px;
-border:none;
-border-radius:30px;
-background:#333;
-color:white;
-cursor:pointer;
-margin-left:10px;
-}
-
-.no-text{
-margin-top:15px;
-background:#333;
-color:white;
-padding:12px 22px;
-border-radius:25px;
-display:inline-block;
-}
-
-/* LOVE TEXT */
-.love-text{
-display:none;
-font-family:'Playfair Display',serif;
-font-size:28px;
-color:white;
-margin-top:15px;
-}
-
-/* CONFETTI */
-.confetti{
-position:fixed;
-width:8px;
-height:8px;
-top:-10px;
-animation:fall 3s linear forwards;
-}
 @keyframes fall{
-to{transform:translateY(100vh);}
-}
-
-/* HEARTS */
-.heart{
-position:fixed;
-bottom:-20px;
-font-size:20px;
-animation:float 5s linear forwards;
-}
-@keyframes float{
-to{transform:translateY(-100vh);}
-}
-
-/* SURPRISE */
-.surprise-btn{
-margin-top:30px;
-padding:12px 25px;
-border:none;
-border-radius:25px;
-background:white;
-color:#ff2d7a;
-cursor:pointer;
-}
-
-/* BOUQUET */
-.bouquet-img{
-width:85%;
-max-width:350px;
-border-radius:20px;
-margin-top:20px;
-opacity:0;
-transform:scale(0.9);
-transition:0.6s;
-}
-
-/* LETTER MODAL */
-.modal{
-position:fixed;
-top:0;
-left:0;
-width:100%;
-height:100%;
-background:rgba(0,0,0,0.6);
-display:none;
-justify-content:center;
-align-items:center;
-}
-
-.modal-content{
-background:white;
-width:85%;
-max-width:400px;
-padding:25px;
-border-radius:20px;
-border:4px solid #ffc1e3;
-text-align:left;
-}
-.close{
-float:right;
-cursor:pointer;
+  to{transform:translateY(120vh) rotate(360deg);}
 }
 </style>
 </head>
 
 <body>
 
-<!-- ENVELOPE -->
-<div class="section active" id="envelopePage">
-<div class="card">
-<img src="envelope.png" class="envelope-img">
-<h2 style="color:#ff2d7a;">For Alya💗💌</h2>
-<button class="open-btn" onclick="openMain()">Open</button>
-</div>
-</div>
+<div id="container">
 
-<!-- MAIN PAGE -->
-<div class="section" id="mainPage">
-<div class="card">
-<img src="mainphoto.jpg" class="main-img">
-<h2>Will you be my Valentine? 💖</h2>
+  <!-- START SCREEN -->
+  <div class="card">
+    <img src="envelope.png.jpg" width="220" onclick="openLetter()" style="cursor:pointer;">
+    <h1>For Alya💗💌</h1>
+    <button class="yes pulse" onclick="openLetter()">Open</button>
+  </div>
 
-<div class="buttons">
-<button class="yes-btn" id="yesBtn" onclick="yesClicked()">Yes 💞</button>
-<button class="no-btn" id="noBtn" onclick="noClicked()">No 😢</button>
-</div>
-
-<div id="noContainer"></div>
-
-<div class="love-text" id="loveText">
-Love youu💞<br>
-You had no choice anw 😌💕<br>
-Guess we have plans now 😁
-</div>
-
-<button class="surprise-btn" id="surpriseBtn" style="display:none;" onclick="openBouquet()">A little surprise ✨</button>
-
-</div>
-</div>
-
-<!-- BOUQUET PAGE -->
-<div class="section" id="bouquetPage">
-<div class="card">
-<h2 style="color:#ff2d7a;">Here’s your flowers (sorry they not real😔)</h2>
-
-<img src="https://i.imgur.com/6Iej2c3.jpg" class="bouquet-img" id="bouquetImg">
-
-<button class="surprise-btn" onclick="openLetter()">📜 Open letter</button>
-</div>
-</div>
-
-<!-- LETTER -->
-<div class="modal" id="letterModal">
-<div class="modal-content">
-<span class="close" onclick="closeLetter()">✖</span>
-<h3 style="font-family:'Playfair Display',serif;">A small note</h3>
-
-<p>
-Dear Alya,<br><br>
-(Replace this with your real letter.)<br><br>
-Love,<br>
-Seif 💞
-</p>
-
-</div>
 </div>
 
 <script>
-let noCount=0;
-
-function openMain(){
-document.getElementById("envelopePage").classList.remove("active");
-document.getElementById("mainPage").classList.add("active");
-}
-
-function yesClicked(){
-document.getElementById("loveText").style.display="block";
-document.getElementById("surpriseBtn").style.display="inline-block";
-document.getElementById("yesBtn").style.transform="scale(1.3)";
-document.getElementById("noBtn").style.display="none";
-confetti();
-hearts();
-}
-
-function confetti(){
-for(let i=0;i<50;i++){
-let c=document.createElement("div");
-c.className="confetti";
-c.style.left=Math.random()*100+"vw";
-c.style.background=["#ff4fa3","#ff99cc","#ffffff"][Math.floor(Math.random()*3)];
-c.style.animationDuration=(2+Math.random()*2)+"s";
-document.body.appendChild(c);
-setTimeout(()=>c.remove(),3000);
-}
-}
-
-function hearts(){
-for(let i=0;i<20;i++){
-let h=document.createElement("div");
-h.className="heart";
-h.innerHTML="💖";
-h.style.left=Math.random()*100+"vw";
-h.style.animationDuration=(3+Math.random()*3)+"s";
-document.body.appendChild(h);
-setTimeout(()=>h.remove(),5000);
-}
-}
-
-function noClicked(){
-let texts=[
-"Are you sure? 🥺",
-"Pleasee😊",
-"With a cherry❤️",
-"Don’t be mean 😔",
-"You don’t love me?",
-"Still no? 😭"
-];
-
-let container=document.getElementById("noContainer");
-
-if(noCount < texts.length){
-container.innerHTML=`<div class="no-text">${texts[noCount]}</div>`;
-noCount++;
-document.getElementById("yesBtn").style.transform=`scale(${1 + noCount*0.15})`;
-}
-
-if(noCount===texts.length){
-document.getElementById("noBtn").style.display="none";
-}
-}
-
-function openBouquet(){
-document.getElementById("mainPage").classList.remove("active");
-document.getElementById("bouquetPage").classList.add("active");
-setTimeout(()=>{
-document.getElementById("bouquetImg").style.opacity="1";
-document.getElementById("bouquetImg").style.transform="scale(1)";
-},100);
-}
 
 function openLetter(){
-document.getElementById("letterModal").style.display="flex";
+  document.getElementById("container").innerHTML = `
+    <div class="card" id="questionCard">
+      <img id="mainPhoto" src="mainphoto.jpg">
+      <h1>Will you be my Valentine? 💖</h1>
+      <div>
+        <button class="yes" id="yesBtn">Yes 💕</button>
+        <button class="no" id="noBtn">No 😢</button>
+      </div>
+    </div>
+  `;
+  setupButtons();
 }
-function closeLetter(){
-document.getElementById("letterModal").style.display="none";
+
+function setupButtons(){
+  const yesBtn=document.getElementById("yesBtn");
+  const noBtn=document.getElementById("noBtn");
+
+  const messages=[
+    "Are you sure? 🥺",
+    "Really sure??",
+    "Alya that’s kinda mean 😔",
+    "Think again...",
+    "You dont love me",
+  ];
+
+  let index=0;
+  let scale=1;
+
+  noBtn.addEventListener("click",function(){
+
+    if(index < messages.length){
+      noBtn.textContent = messages[index];
+      index++;
+    } else {
+      noBtn.textContent="Still no? 😭";
+    }
+
+    scale+=0.35;
+    yesBtn.style.transform="scale("+scale+")";
+
+    noBtn.style.position="absolute";
+    noBtn.style.left=Math.random()*70+"%";
+    noBtn.style.top=Math.random()*60+"%";
+  });
+
+  yesBtn.addEventListener("click",function(){
+    document.getElementById("container").innerHTML=`
+      <div class="card">
+        <h1>You had no choice 😌💕<br><br>Guess we have plans now 😁</h1>
+        <img id="finalPhoto" src="finalphoto.jpg.jpg">
+      </div>
+    `;
+    startHearts();
+    startConfetti();
+  });
 }
+
+function startHearts(){
+  setInterval(()=>{
+    const heart=document.createElement("div");
+    heart.className="floating-heart";
+    heart.innerHTML="💖";
+    heart.style.left=Math.random()*100+"vw";
+    heart.style.animationDuration=(4+Math.random()*2)+"s";
+    document.body.appendChild(heart);
+    setTimeout(()=>heart.remove(),6000);
+  },400);
+}
+
+function startConfetti(){
+  const colors=["#ff2e88","#ffffff","#ffb6d9","#ff66b3"];
+  setInterval(()=>{
+    const piece=document.createElement("div");
+    piece.className="confetti-piece";
+    piece.style.left=Math.random()*100+"vw";
+    piece.style.backgroundColor=colors[Math.floor(Math.random()*colors.length)];
+    piece.style.animationDuration=(3+Math.random()*2)+"s";
+    document.body.appendChild(piece);
+    setTimeout(()=>piece.remove(),5000);
+  },150);
+}
+
 </script>
 
 </body>
