--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@ function setupButtons(){
     </div>
   `;
   startHearts();
-  startConfetti();
-});
+  startConfetti()
+}
 
 function startHearts(){
   setInterval(()=>{
