--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ function setupButtons(){
     document.getElementById("container").innerHTML=`
       <div class="card">
         <div class="love-text">Love you💕</div>
-        <h1>You had no choice 😌💕<br><br>Guess we have plans now 😁</h1>
+        <h1>You had no choice anw 😌💞<br><br>Guess we have plans now 😁</h1>
         <img id="finalPhoto" src="finalphoto.jpg.jpg">
       </div>
     `;
