--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ function setupButtons(){
     "Alya that’s kinda mean 😔",
     "Think again...",
     "You dont love me",
+    "Click it now",
   ];
 
   let index=0;
