--- a/index.html
+++ b/index.html
@@ -188,17 +188,57 @@ function setupButtons(){
   });
 
     yesBtn.addEventListener("click",function(){
-    document.getElementById("container").innerHTML=`
-      <div class="card">
-        <div class="love-text">Love you💕</div>
-        <h1>You had no choice anw 😌💞<br><br>Guess we have plans now 😁</h1>
-        <img id="finalPhoto" src="finalphoto.jpg.jpg">
+
+  // unlock scrolling only now
+  document.body.style.overflowY = "auto";
+  document.body.style.alignItems = "flex-start";
+
+  document.getElementById("container").innerHTML=`
+    <div class="card">
+      <div class="love-text">Love you💕</div>
+      <h1>You had no choice anw 😌💞<br><br>Guess we have plans now 😁</h1>
+      <img id="finalPhoto" src="finalphoto.jpg.jpg">
+      <p style="margin-top:20px;color:white;font-weight:600;">
+        Scroll for something special ↓
+      </p>
+    </div>
+
+    <div id="letterSection" style="
+      margin-top:120px;
+      padding:100px 20px;
+      min-height:100vh;
+      background:linear-gradient(to bottom,#ffd6eb,#fff0f8);
+      border-radius:40px 40px 0 0;
+      text-align:center;
+    ">
+      <h1 style="color:#ff2e88;">A little surprise 💌</h1>
+
+      <div id="letterEnvelope" style="
+        margin:40px auto;
+        width:200px;
+        height:140px;
+        background:#ff4fa3;
+        border-radius:20px;
+        display:flex;
+        justify-content:center;
+        align-items:center;
+        font-family:'Playfair Display',serif;
+        font-size:24px;
+        color:white;
+        cursor:pointer;
+        box-shadow:0 15px 40px rgba(0,0,0,0.2);
+        transition:0.3s;
+      ">
+        Open
       </div>
-    `;
-    startHearts();
-    startConfetti();
-  });
-}
+    </div>
+  `;
+
+  document.getElementById("letterEnvelope").addEventListener("click",openLoveLetter);
+
+  startHearts();
+  startConfetti();
+});
 
 function startHearts(){
   setInterval(()=>{
@@ -223,6 +263,49 @@ function startConfetti(){
     document.body.appendChild(piece);
     setTimeout(()=>piece.remove(),5000);
   },150);
+}
+
+function openLoveLetter(){
+  const overlay = document.createElement("div");
+
+  overlay.style.position="fixed";
+  overlay.style.top="0";
+  overlay.style.left="0";
+  overlay.style.width="100%";
+  overlay.style.height="100%";
+  overlay.style.background="rgba(0,0,0,0.6)";
+  overlay.style.display="flex";
+  overlay.style.justifyContent="center";
+  overlay.style.alignItems="center";
+  overlay.style.zIndex="9999";
+
+  overlay.innerHTML=`
+    <div style="
+      width:85%;
+      max-width:420px;
+      background:white;
+      padding:30px;
+      border-radius:25px;
+      box-shadow:0 25px 60px rgba(0,0,0,0.3);
+      font-family:'Playfair Display',serif;
+      color:#333;
+      position:relative;
+    ">
+      <div style="position:absolute;right:15px;top:10px;cursor:pointer;font-size:20px;" onclick="this.closest('div').parentElement.remove()">✕</div>
+
+      <h2 style="color:#ff2e88;text-align:center;">For You 💗</h2>
+
+      <p style="margin-top:20px;line-height:1.6;">
+        Dear Alya,<br><br>
+        (Write your real message here. Replace this text.)<br><br>
+        I just wanted to say...<br><br>
+        Love,<br>
+        Seif 💞
+      </p>
+    </div>
+  `;
+
+  document.body.appendChild(overlay);
 }
 
 </script>
